--- a/odoo.smarterbot.store/landing/package.json
+++ b/odoo.smarterbot.store/landing/package.json
@@ -2,6 +2,9 @@
   "name": "smarteros-landing",
   "private": true,
   "version": "0.1.0",
+  "engines": {
+    "node": ">=25.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
