chore: downgrade a Node 20 LTS, tsconfig estable, Dockerfile y compose compatibles con Vercel

--- a/odoo.smarterbot.store/landing/docker-compose.yml
+++ b/odoo.smarterbot.store/landing/docker-compose.yml
@@ -1,14 +1,12 @@
 services:
   smarteros-landing:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: smarteros-landing
+    restart: unless-stopped
+    env_file:
+      - .env.production
     ports:
       - "3000:3000"
-    environment:
-      - NODE_ENV=production
-    restart: unless-stopped
     networks:
       - smarteros-net
 
