--- a/odoo.smarterbot.store/landing/tsconfig.json
+++ b/odoo.smarterbot.store/landing/tsconfig.json
@@ -12,13 +12,12 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
-    "types": ["node", "react"],
+    "jsx": "preserve",
+    "types": ["node"],
     "typeRoots": ["./types", "./node_modules/@types"],
     "incremental": true,
     "plugins": [
