--- a/odoo.smarterbot.cl/package.json
+++ b/odoo.smarterbot.cl/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=24.x"
+    "node": "20.x"
   },
   "scripts": {
     "build": "next build",
@@ -49,11 +49,11 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.0.3",
+    "next": "14.2.15",
     "next-themes": "latest",
-    "react": "19.2.0",
+    "react": "18.2.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
@@ -66,8 +66,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "baseline-browser-mapping": "^2.8.32",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
