--- a/odoo.smarterbot.cl/tsconfig.json
+++ b/odoo.smarterbot.cl/tsconfig.json
@@ -1,21 +1,17 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "target": "ES2020",
+    "lib": ["dom", "dom.iterable", "es2020"],
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "allowJs": true,
-    "target": "ES6",
-    "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
+    "skipLibCheck": true,
     "incremental": true,
     "plugins": [
       {
